# BaseGraphExtensionExample

./: CMakeLists.txt  README.md  compiled_feature.cpp  compiled_feature.h  pyproject.toml
.github/workflows/: python_install.yml
cmake/: BaseGraphExampleConfig.cmake.in
example/: CMakeLists.txt  README.md  usage_example.cpp
include/BaseGraph/extensions/example/: functions.h
python/: CMakeLists.txt  pybind.cpp
src/: CMakeLists.txt  functions.cpp
tests/: CMakeLists.txt  test_example.cpp
