[build-system]
requires = ["scikit-build-core>=0.2.1", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "basegraph_example"
version = "0.1.0"
description = "BaseGraph extension example."
readme = "README.md"
authors = [
  { name = "Simon Lizotte" },
]
requires-python = ">=3.7"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
